Saving To Github

--- a/pwpb.html
+++ b/pwpb.html
@@ -20,9 +20,9 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" id="home" aria-current="page" href="#">Home</a>
-            <a class="nav-link" id="hosting" href="#">Hosting</a>
-            <a class="nav-link" id="paket" href="#">Paket</a>
-            <a class="nav-link disabled" id="contact">Contact</a>
+            <a class="nav-link" id="hosting" href="#packet">Hosting</a>
+            <a class="nav-link" id="paket" href="#packet">Paket</a>
+            <a class="nav-link" id="contact" href="#kontak">Contact</a>
           </div>
         </div>
       </div>
@@ -34,11 +34,10 @@
 
         <p class="lead">Kami Menyediakan berbagai Paket</p>
         <p class="lead1">Hosting dengan Fitur Lengkap</p>
-        <button class="button" type="button">Lihat Penawaran</button>
       </div>
     </div>
     <img class="image1" src="image/cloud.png" alt="" />
-    <h1 class="paket">Pilihan Paket Hosting Indonesia</h1>
+    <h1 class="paket" id="packet">Pilihan Paket Hosting Indonesia</h1>
     <div class="container">
       <div class="hostingpilihan">
         <p class="bulann">a</p>
@@ -48,7 +47,7 @@
         <p class="bulan"><z>RP. 19.800</z> /Bulan</p>
         <p class="mb"><i class="fa-solid fa-circle-check"></i><m class="disk">500 MB Disk Space</m></p>
         <p class="domain"><i class="fa-solid fa-circle-check"></i><m class="disk">1 Domain</m></p>
-        <center><a href="https://www.niagahoster.co.id/" target="_blank"><button class="button1"> Pilih Paket</button></a></center>
+        <center><a href="https://www.niagahoster.co.id/" ><button class="button1"> Pilih Paket</button></a></center>
       </div>
     </div>
      <div class="container-class">
@@ -85,7 +84,7 @@
         <center><a href="https://www.niagahoster.co.id/" target="_blank"><button class="button1"> Pilih Paket</button></a></center>
       </div>
     </div>
-    <div class="form">
+    <div class="form" id="kontak">
       <h1 class="isi">a</h1>
       <h1 class="isi1">Hubungi Kami</h1>
       <div class="input-container">
